# Mistral-Core

./: CMakeLists.txt  Dependencies.cmake  README.md
cmake/: Dependencies.cmake
include/: CMakeLists.txt  Color.h  Component.h  DefaultRenderPipeline.h  IRenderPipeline.h  ImGuiConfigCustom.h  Matrix.h  Mistral.h  Quaternion.h  Resources.h  Spatial.h  Vector.h
src/: CMakeLists.txt  Color.cpp  Component.cpp  DefaultRenderPipeline.cpp  Matrix.cpp  Mistral.cpp  Quaternion.cpp  Random.cpp  Resources.cpp  Spatial.cpp  Vector.cpp
